feat: changing theme for the tmux and clipboard support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,9 +3,13 @@ source-file ~/.tmux.reset.conf
 unbind C-b
 set-option -g prefix C-Space
 bind-key C-k send-prefix
+# Tell tmux to force truecolor (24-bit)
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ",screen-256color:Tc"
+
 
 # split panes using h and v
-bind h split-window -h
+bind u split-window -h
 bind v split-window -v
 unbind '"'
 unbind %
@@ -27,6 +31,7 @@ set -g escape-time 0             # zero-out escape time delay
 set -g history-limit 1000000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
+# set -g @clipboard 'xclip -selection clipboard'
 set -g status-position top       # macOS / darwin style
 set -gq allow-passthrough on
 # set -g status-style 'bg=black'
@@ -74,29 +79,37 @@ set -g @plugin 'tmux-plugins/tmux-open'
 setw -g mode-keys vi
 
 # catppucin
-set -g @plugin 'omerxx/catppuccin-tmux' 
-set -g @catppuccin_window_left_separator " █"
-set -g @catppuccin_window_right_separator "█ "
-# set -g @plugin 'catppuccin/tmux#v2.1.1' # See https://github.com/catppuccin/tmux/tags for additional tags
-# ...alongside
+# TPM plugin manager
 set -g @plugin 'tmux-plugins/tpm'
-set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato or mocha
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-set -g @catppuccin_status_modules_right "directory date_time"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_left_separator  " █"
-set -g @catppuccin_status_right_separator "█ "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
-set -g @catppuccin_date_time_text "%H:%M"
+
+# Status bar
+set -g status on
+set -g status-interval 5
+set -g status-justify left
+set -g status-bg colour0
+set -g status-fg colour46
+
+# Status left: session name
+set -g status-left-length 40
+set -g status-left '#[fg=colour0,bg=colour46]#[fg=colour46,bg=colour0] #S #[fg=colour0,bg=colour46]#[default]'
+
+# Status right: time + path
+set -g status-right-length 120
+set -g status-right '#[fg=colour46,bg=colour0] %Y-%m-%d %H:%M'
+
+# Window list
+set -g window-status-format '#[fg=colour46] #I:#W'
+set -g window-status-current-format '#[fg=colour0,bg=colour46] #[bold]#I:#W #[fg=colour0,bg=colour46]'
+
+# Pane borders
+set -g pane-border-style 'fg=colour46'
+set -g pane-active-border-style 'fg=colour46'
+
+# Message styling
+set -g message-style 'bg=colour0,fg=colour46'
+
+# Mode style (copy-mode, etc.)
+set -g mode-style 'bg=colour0,fg=colour46'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
