feat: adding i3, making nvim us spaces instead of tabs, adding aliases

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -91,15 +91,15 @@ set -g status-fg colour46
 
 # Status left: session name
 set -g status-left-length 40
-set -g status-left '#[fg=colour0,bg=colour46]#[fg=colour46,bg=colour0] #S #[fg=colour0,bg=colour46]#[default]'
+set -g status-left '#[fg=colour0,bg=colour46]#[fg=colour46,bg=colour0] ❄️ #S #[fg=colour0,bg=colour46]#[default]'
 
 # Status right: time + path
 set -g status-right-length 120
-set -g status-right '#[fg=colour46,bg=colour0] %Y-%m-%d %H:%M'
+set -g status-right '#[fg=colour46,bg=colour0] ❄️ %Y-%m-%d %H:%M'
 
 # Window list
-set -g window-status-format '#[fg=colour46] #I:#W'
-set -g window-status-current-format '#[fg=colour0,bg=colour46] #[bold]#I:#W #[fg=colour0,bg=colour46]'
+set -g window-status-format '#[fg=colour46]  #I:#W'
+set -g window-status-current-format '#[fg=colour0,bg=colour46]  #[bold]#I:#W #[fg=colour0,bg=colour46]'
 
 # Pane borders
 set -g pane-border-style 'fg=colour46'
