feat: hiding ghostty's window decoration and configure i3 to support riseup-vpn

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -38,6 +38,9 @@ cursor-color = 00FF00
 selection-background = 003300
 selection-background = 00FF00
 
+window-decoration = false
+gtk-titlebar = false
+gtk-adwaita = false
 #
 # # Empty values are used to reset config keys to default.
 # key =
