--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -61,8 +61,7 @@ bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+space exec rofi -show drun
-
+bindsym $mod+space exec rofi -show drun -theme gruvbox-dark
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -195,14 +194,15 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+        tray_output primary
 }
 
 # adding gap
-gaps inner 5
-gaps outer 1
+# gaps inner 5
+# gaps outer 1
 
 # adding wallpaper
-exec --no-startup-id feh --bg-center /home/neo/Pictures/neo.jpeg
+exec --no-startup-id feh --bg-scale /home/neo/Pictures/neo.jpeg
 
 client.focused          #4c7899 #285577 #ffffff #2e9ef4 #285577
 client.unfocused        #333333 #222222 #888888 #292d2e #222222
@@ -212,3 +212,12 @@ client.urgent           #2f343a #900000 #ffffff #900000 #900000
 new_window pixel 2
 
 exec --no-startup-id picom
+
+# hibernate
+bindsym $mod+Home exec systemctl hibernate
+
+exec --no-startup-id trayer --edge top --align right --SetDockType true --SetPartialStrut true --expand true --widthtype request --transparent true --alpha 0 --tint 0x000000 --height 22
+
+exec --no-startup-id /etc/profiles/per-user/neo/libexec/polkit-gnome-authentication-agent-1
+
+exec dbus-launch --sh-syntax --exit-with-session i3
